Try to modify connect 4 code, only some progress

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>Tic-Tac-Toe</header>
-    <h2>X's Turn</h2>
+    <h2>O's Turn</h2>
 
     <!-- section for our column buttons (markers) -->
     <!-- <section id="markers">
