--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="css/main.css">
     <!-- script tags with the defer attribute -->
     <!-- pause until the DOM is loaded -->
-    <script defer src="js/main.js"></script>
+    <script defer src="./js/main.js"></script>
     <title>Tic Tac Toe</title>
 </head>
 <body>
     <header>Tic-Tac-Toe</header>
     <h2>O's Turn</h2>
-
+    <p>TESTESTESTESTESTEST</p>
     <!-- section for our column buttons (markers) -->
     <!-- <section id="markers">
         <div></div>
